fix issues for Ubuntu 14.04 x64.

--- a/README
+++ b/README
@@ -6,3 +6,6 @@ Contact egonina@eecs.berkeley.edu
 ----------------------------------------------------------
 
 See https://github.com/egonina/pycasp/wiki/
+
+extra steps:
+mv .aksetup-defaults.py ~
